# rim

./: Cargo.toml
conf/: rim.example.yaml
src/: config.rs  fs.rs  injected_rm  interceptor.c  lib.rs  main.rs  metadata_db.rs  metadata_db.sql  util.rs
