[package]
name = "rim"
version = "0.1.0"
edition = "2021"
keywords = ["trash", "cli", "utility"]
description = "A command line utility which safely deletes files"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.31.0", features = ["bundled"] }
blake3 = "1"